        Reviewed by Adam Roben.

Add PLATFORM(CHROMIUM) to the "we don't use cairo" blacklist
        until https://bugs.webkit.org/show_bug.cgi?id=22250 is fixed.

        * wtf/Platform.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@38382 bbb929c8-8fbe-4397-9dbb-9b2b20218538